--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "my-app",
+  "name": "dashboard-developers",
+  "homepage": "https://ligmanstark.github.io/dashboard-developers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.61",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "component": "generate-react component",
+    "predeploy":"yarn run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +32,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "16.7.13",
+    "@types/react": "18.0.7",
+    "@types/react-dom": "18.0.6",
+    "generate-react-cli": "^7.3.0",
+    "gh-pages": "^6.0.0",
+    "sass": "^1.54.5",
+    "typescript": "4.4.2"
   }
 }
